[tool.poetry]
name = "rosa"
version = "0.1.0"
description = ""
authors = ["Jens Christian Hillerup <jens@hillerup.net>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.21"
matplotlib = "^3.5.1"
Flask = "^2.0.3"
librosa = "^0.9.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
